Fix up spacing.

--- a/public/stylesheets/mobile.styl
+++ b/public/stylesheets/mobile.styl
@@ -44,6 +44,7 @@ header
       float left
       width 100%
       font-size 2em
+      margin-top 5px
       li
         display inline
         padding 0 5%
@@ -67,14 +68,16 @@ header
 .home-page
   h1.title
     font-size 3em
-    padding-bottom 7%
-    
+    margin-bottom 10px
     
 
 /* Work page
 ---------------------------------------*/
 
 .work-page
+  h1
+    margin-bottom 10px
+    
   ul.work-listing
     li
       float left
